PL-661 BUG - Device Testing - Reduce section padding on smaller devices Removing calculated padding on burst

--- a/Boilerplate/src/sass/modules/_partner-hero.scss
+++ b/Boilerplate/src/sass/modules/_partner-hero.scss
@@ -88,12 +88,6 @@
     }
 }
 
-@include mq($until: desktop) {
-    .partner-hero {
-        padding: 0 $pad;
-    }
-}
-
 @include mq($until: tablet) {
     .partner-hero--with-card {
         .partner-hero--headline {
